second upload after completing the requirements

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,9 +3,10 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   padding: 20px 200px 20px 20px;
   background-color: #ecd3d3;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
   left: 0;
