--- a/src/components/BlogPost.css
+++ b/src/components/BlogPost.css
@@ -90,3 +90,10 @@
   border-radius: 10px;
   border: 3px solid #ffffff;
 }
+@media only screen and (max-width: 600px) {
+  .blog-post-container{
+    grid-template-areas:
+    " textPart textPart "
+    " thumbnail thumbnail "
+    "commentPart commentPart ";}
+}
