--- a/src/components/BlogPost.css
+++ b/src/components/BlogPost.css
@@ -40,7 +40,8 @@
   background-color: aliceblue;
   border-radius: 20px;
   background: #e0e0e0;
-  box-shadow: 20px 20px 60px #fffefe, -20px -20px 60px #b3b3b3;
+ 
+  z-index: -999;
 }
 
 .bauthor {
