--- a/src/pages/LoginPage.css
+++ b/src/pages/LoginPage.css
@@ -6,21 +6,22 @@
   padding: 40px;
   border-radius: 20px;
   background-color: #e0e5ec;
-  box-shadow: 10px 10px 20px #bcbcbc, -10px -10px 20px #ffffff;
 }
 
 .login-container h1 {
-  font-size: 24px;
+  font-size: 2rem;
   margin-bottom: 20px;
 }
 
 .login-container p {
+  font-size: 1rem;
   color: red;
   margin-bottom: 10px;
 }
 
 .login-container label {
   font-weight: bold;
+  font-size: 1rem;
 }
 .login-container form {
   display: flex;
@@ -35,7 +36,7 @@
 
 .login-container input {
   width: 35vw;
-  padding: 1rem;
+  padding: .5rem;
   margin-bottom: 1rem;
   border: 1px solid #ffffff;
   border-radius: 5px;
