second upload after completing the requirements

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -89,3 +89,8 @@ button:hover {
   margin-left: 1rem;
   color: rgba(255, 0, 51, 0.699);
 }
+@media only screen and (max-width: 600px) {
+  nav{
+    width: 95vw;
+   }
+}
